Added controls to menu

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kabooooom</title>
 </head>
-<br>
-    <a href="https://github.com/djangothesolarboy/kaboom-experiment" target="_blank">Github</a></br>
+<body>
+    <a class='link' href="https://github.com/djangothesolarboy/kaboom-experiment" target="_blank">Github</a>
     <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
-    <script src="./js/game.js"></script>
+    <script class='game' src="./js/game.js"></script>
     <!-- TODO: controls -->
 </body>
 </html>
