--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kabooooom</title>
+    <title>Blue Boy</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <a class='link' href="https://github.com/djangothesolarboy/kaboom-experiment" target="_blank">Github</a>
-    <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
-    <script class='game' src="./js/game.js"></script>
+    <div class="game_container">
+        <a class='link' href="https://github.com/djangothesolarboy/kaboom-experiment" target="_blank">Github</a>
+        <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
+        <script class='game' src="./js/game.js"></script>
+    </div>
     <!-- TODO: controls -->
 </body>
 </html>
