Cleaned up a bit

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
         <script class='game' src="./js/game.js"></script>
     </div>
-    <!-- TODO: controls -->
+    <!-- TODO: 
+        - controls
+        - fix bugs
+        - style page
+    -->
 </body>
 </html>
