Added controls to page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
+    <script class='game' src="./js/game.js"></script>
     <div class="game_container">
-        <a class='link' href="https://github.com/djangothesolarboy/kaboom-experiment" target="_blank">Github</a>
-        <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
-        <script class='game' src="./js/game.js"></script>
+        <div class="game_controls">
+            <h2>Controls</h2>
+            <div>
+                <h3>Menu:</h3>
+                Press <img src='./assets/imgs/controls/space_bar.ico'> to start game.
+            </div>
+            <div>
+                <h3>Game:</h3>
+                <div>
+                    <img src='./assets/imgs/controls/a_button.png'><img src='./assets/imgs/controls/d_button.png'> || <img src='./assets/imgs/controls/left_arrow.ico'><img src='./assets/imgs/controls/right_arrow.ico'> for movement.
+                </div>
+                <div>
+                    <img src='./assets/imgs/controls/r_button.png'> restarts game.
+                </div>
+                <div>
+                    <img src='./assets/imgs/controls/space_bar.ico'> || <img src='./assets/imgs/controls/w_button.png'> || <img src='./assets/imgs/controls/up_arrow.ico'> to jump.
+                </div>
+            </div>
+            <a class='link' href="https://github.com/djangothesolarboy/kaboom-experiment" target="_blank">Github</a>
+        </div>
     </div>
     <!-- TODO: 
         - controls
